<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bobority</string>
    <string name="title_activity_community">Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="birthdate">Birth date:</string>
    <string name="street1">Street 1</string>
    <string name="street2">Street 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="facebook_app_id">1522559428023314</string>
    <string name="category">Category</string>
    <string name="purchase_type">Purchase Type</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="memo">Memo</string>
    <string name="post">Post</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="price_category">Price Category</string>
    <string name="deposit">Deposit</string>

    <string name="up_to_10">Up To 10 Characters</string>
    <string name="up_to_20">Up To 20 Characters</string>
    <string name="up_to_30">Up To 30 Characters</string>

    <string name="ok">OK</string>

</resources>
