<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbackground"
    android:orientation="vertical"
    android:padding="0dp"
    tools:ignore="MergeRootFrame"
    tools:context=".CreateAccount">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/imageView"
        android:src="@drawable/step1"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:paddingTop="25dp"
                    android:text="Carl"
                    android:textColor="#000000"
                    android:ems="5"
                    android:id="@+id/firstName"
                    android:layout_gravity="left" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:inputType="textPersonName"
                    android:text="Demolder"
                    android:textColor="#000000"
                    android:ems="5"
                    android:id="@+id/lastName"
                    android:layout_gravity="left" />

            </LinearLayout>

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/addProPic"
                android:src="@drawable/propic1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:text="@string/birthdate"
            android:id="@+id/staticBirthDate"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="10"
            android:textColor="#000000"
            android:ems="3"
            android:id="@+id/editMonth" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="20"
            android:textColor="#000000"
            android:ems="3"
            android:id="@+id/editDay" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#000000"
            android:text="1994"
            android:ems="3"
            android:id="@+id/editYear" />
    </LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="bravesfan1020@gmail.com"
        android:textColor="#000000"
        android:ems="20"
        android:id="@+id/editEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColorHint="#000000"
        android:hint=".EDU Email"
        android:ems="10"
        android:id="@+id/editEDU" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/address"
        android:src="@drawable/address"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/street1"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:layout_weight=".2"
        android:ems="15"
        android:layout_gravity="center"
        android:id="@+id/editStreet1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:layout_weight=".2"
        android:hint="@string/street2"
        android:ems="15"
        android:layout_gravity="center"
        android:id="@+id/editStreet2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:hint="@string/city"
            android:ems="5"
            android:id="@+id/editCity" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:inputType="text"
            android:hint="@string/state"
            android:ems="5"
            android:id="@+id/editState" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:inputType="number"
            android:hint="@string/zipcode"
            android:ems="5"
            android:id="@+id/editZipcode" />
    </LinearLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/saveButton"
        android:layout_weight="1.25"
        android:src="@drawable/savebutton"
        android:background="#00000000"
        android:layout_gravity="center_horizontal" />

</LinearLayout>